# miru

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: build-ios.yml
src/: error.rs  main.rs
src/api/: anilist.rs  mapping.rs  media.rs  mod.rs  realdebrid.rs  source_scoring.rs  tmdb.rs  torrentio.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: loader.rs  mod.rs  schema.rs
src/history/: mod.rs
src/player/: mod.rs
src/streaming/: mod.rs
src/ui/: app.rs  init_wizard.rs  mod.rs  theme.rs
src/ui/components/: detail_card.rs  input.rs  list.rs  mod.rs  spinner.rs  stream_detail_card.rs
src/ui/screens/: download.rs  episodes.rs  error.rs  mod.rs  results.rs  search.rs  seasons.rs  sources.rs  vlc_link.rs
