[package]
name = "miru"
version = "0.2.0"
edition = "2021"
description = "A terminal-native streaming CLI for anime, movies, and TV shows"
license = "MIT"
repository = "https://github.com/yannick/miru"
keywords = ["anime", "movies", "streaming", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Directory paths
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL encoding
urlencoding = "2"

# Regex for parsing
regex = "1"
lazy_static = "1"

# Find executables in PATH
which = "6"

# Torrent streaming (for direct P2P playback without debrid)
librqbit = "8.1"

# Temp directories
tempfile = "3"

# SQLite for watch history
rusqlite = { version = "0.31", features = ["bundled"] }

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Vendored OpenSSL (required by librqbit, avoids system libssl-dev dependency)
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
